{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 71,
  "lineage": "11f9310e-2515-1c82-4fd0-fff2cb1eebe9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00d1b083f47fedfa6",
            "domain": "vpc",
            "id": "eipalloc-0b1165c79bb50998b",
            "instance": "i-0383c9eece74c254d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04dcddd455d11ce4e",
            "private_dns": "ip-10-0-1-167.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-3-37-18-151.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.18.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_instance.my_instance",
            "aws_key_pair.my_sshkey",
            "aws_security_group.my_sg_web",
            "data.aws_ami.amazon_linux",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ff2ef5aa2eecb5bc",
            "domain": "vpc",
            "id": "eipalloc-0bf68b6d27279d3a2",
            "instance": "i-083d15090f614a881",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0bc6548eee62b9fe5",
            "private_dns": "ip-10-0-2-16.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.16",
            "public_dns": "ec2-13-209-103-191.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.103.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "aws_instance.my_instance",
            "aws_key_pair.my_sshkey",
            "aws_security_group.my_sg_web",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03787d1dcbb31f926",
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:instance/i-0383c9eece74c254d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0383c9eece74c254d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04dcddd455d11ce4e",
            "private_dns": "ip-10-0-1-167.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.167",
            "public_ip": "3.37.18.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0e167f1cf6cae7569",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053d79d57d291b191",
            "tags": {
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088ec0edc086c5ae2"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_sshkey",
            "aws_security_group.my_sg_web",
            "data.aws_ami.amazon_linux",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03787d1dcbb31f926",
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:instance/i-083d15090f614a881",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083d15090f614a881",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc6548eee62b9fe5",
            "private_dns": "ip-10-0-2-16.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.16",
            "public_ip": "13.209.103.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0099c7894099ccc34",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06711db623352c535",
            "tags": {
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088ec0edc086c5ae2"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_sshkey",
            "aws_security_group.my_sg_web",
            "data.aws_ami.amazon_linux",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:security-group/sg-088ec0edc086c5ae2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088ec0edc086c5ae2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-web",
            "name_prefix": "",
            "owner_id": "552663305295",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:internet-gateway/igw-0df3f47c58df9f3d4",
            "id": "igw-0df3f47c58df9f3d4",
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df3f47c58df9f3d4",
            "id": "r-rtb-015b93cdf82af8f911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-015b93cdf82af8f91",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my_vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:route-table/rtb-02cb10c843d635a4a",
            "id": "rtb-02cb10c843d635a4a",
            "owner_id": "552663305295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:route-table/rtb-0e2c477b3787ad7c5",
            "id": "rtb-0e2c477b3787ad7c5",
            "owner_id": "552663305295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:route-table/rtb-015b93cdf82af8f91",
            "id": "rtb-015b93cdf82af8f91",
            "owner_id": "552663305295",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df3f47c58df9f3d4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-public",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-public",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cf3eadd4a57a299",
            "route_table_id": "rtb-02cb10c843d635a4a",
            "subnet_id": "subnet-0697b14a5eb2f08e5"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00db70c4dac6660ea",
            "route_table_id": "rtb-0e2c477b3787ad7c5",
            "subnet_id": "subnet-04ea1384d21491f1a"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my_vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a94565254f0c07a7",
            "route_table_id": "rtb-015b93cdf82af8f91",
            "subnet_id": "subnet-053d79d57d291b191"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my_vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc93d079f7f2558",
            "route_table_id": "rtb-015b93cdf82af8f91",
            "subnet_id": "subnet-06711db623352c535"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-0697b14a5eb2f08e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0697b14a5eb2f08e5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-04ea1384d21491f1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-04ea1384d21491f1a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-053d79d57d291b191",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-053d79d57d291b191",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-public-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-public-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.my_vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-06711db623352c535",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06711db623352c535",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-public-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-public-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-0d0ecfdc48d3e2058"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:vpc/vpc-0d0ecfdc48d3e2058",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0086af0fbc3d82bea",
            "default_route_table_id": "rtb-0d952121fccd97dec",
            "default_security_group_id": "sg-004723511daf62edc",
            "dhcp_options_id": "dopt-0f983ca3ce6311be6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d0ecfdc48d3e2058",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d952121fccd97dec",
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            }
          }
        }
      ]
    }
  ]
}